@@ -4,6 +4,8 @@
 
 - Add support for "sticky" posts (sticky.php, single-sticky.php, feed-sticky.php) in the post context
 - Set default context to archive instead of home
+- Properly load type-* templates in General context
+- Requires WordPress 3.6 (for get_post() returning global $post)
 
 ## 3.4
 
